# TL

./: .gitmodules  LICENSE  README.md  info.txt  sha256iter.cu
HaskellStuff/verifyTL/: ChangeLog.md  README.md  package.yaml
HaskellStuff/verifyTL/app/: Main.hs
concept/: .gitignore  ChangeLog.md  LICENSE  README.md  index.jpeg.tla  package.yaml  stack.yaml
concept/app/: Main.hs
concept/app/TL/: Bench.hs  Create.hs  Solve.hs  Util.hs
concept/app/chain/: Main.hs
concept/app/create/: Main.hs
concept/app/hash/: Main.hs
concept/app/solve/: Main.hs
concept/app/testtl/: Main.hs  Test.hs
concept/app/tl/: Main.hs
concept/app/tl/TL/: Bench.hs  Create.hs  Solve.hs  Util.hs
concept/app2/: Main.hs
concept/cbits/: chacha.c  chacha_offset.c  sha256-sse41-sha-x86.c  sha256-x86.c  sha256.c
concept/cuda/: sha256_iter.cu  sha256_iter.ptx  sha256_iter_sm52.ptx
concept/lib/: CMakeLists.txt  export.cpp  export.hpp
concept/lib/app/: CMakeLists.txt  main.cpp
concept/lib/sha-impls/: CMakeLists.txt
concept/lib/sha-impls/arm-sha/: CMakeLists.txt
concept/lib/sha-impls/arm-sha/kernels/: sha256-sha-arm.c  sha256-sha-arm.h
concept/lib/sha-impls/arm-sha/src/: arm_sha.cpp  arm_sha.hpp
concept/lib/sha-impls/cuda-sha/: CMakeLists.txt  Makefile
concept/lib/sha-impls/cuda-sha/kernels/: sha256_iter.cu
concept/lib/sha-impls/cuda-sha/src/: cuda_sha.cpp  cuda_sha.hpp
concept/lib/sha-impls/sha-generic/: CMakeLists.txt
concept/lib/sha-impls/sha-generic/kernels/: sha256-generic.c  sha256-generic.h
concept/lib/sha-impls/sha-generic/src/: sha_generic.cpp  sha_generic.hpp
concept/lib/sha-impls/x86-sha/: CMakeLists.txt
concept/lib/sha-impls/x86-sha/kernels/: sha256_sse41_sha_x86.c  sha256_sse41_sha_x86.h
concept/lib/sha-impls/x86-sha/src/: x86_sha.cpp  x86_sha.hpp
concept/lib/util/: CMakeLists.txt
concept/lib/util/src/: hash_finder.cpp  hash_finder.hpp
concept/src/Crypto/: TL.hs  TL2.hs
concept/src/Crypto/TL/: Archive.hs  Bulk.hs  Chain.hs  Crypt.hs  Hashing.hs  Header.hs  Impls.hs  Primitives.hs  Types.hs  Util.hs
concept/src/Crypto/TL/Archive/: Crypt.hs  Header.hs
concept/src/Crypto/TL/Chain/: Internal.hs  Parallel.hs
concept/src/Crypto/TL/Hashing/: Cryptonite.hs  Generic.hs  Impls.hs  Util.hs  X86.hs
concept/src/Crypto/TL/Hashing/Impls/: Arm.hs  Cuda.hs  Generic.hs  Native.hs  X86.hs
concept/src/Crypto/TL/Impls/: Arm.hs  Cuda.hs  Generic.hs  Native.hs  Util.hs  X86.hs
concept/src/Crypto/TL/Primitives/: BulkHashFunc.hs  Chain.hs  Checksum.hs  EncryptedHash.hs  Hash.hs  HashFunc.hs  ShortHash.hs  Tower.hs
concept/src/Crypto/TL/Util/: HashUnits.hs  HashesFromFile.hs
concept/test/: Impls.hs  Spec.hs  TestVectors.hs
concept/tl-lib/: CMakeLists.txt  export.cpp  export.hpp
concept/tl-lib/app/: CMakeLists.txt  main.cpp
concept/tl-lib/sha256-impls/: CMakeLists.txt
concept/tl-lib/sha256-impls/arm-crypto/: CMakeLists.txt
concept/tl-lib/sha256-impls/arm-crypto/kernels/: sha256-sha-arm.c
concept/tl-lib/sha256-impls/arm-crypto/src/: arm_sha.cpp
concept/tl-lib/sha256-impls/cuda/: CMakeLists.txt  Makefile
concept/tl-lib/sha256-impls/cuda/kernels/: sha256_iter.cu
concept/tl-lib/sha256-impls/cuda/src/: cuda_sha.cpp  cuda_sha.hpp
concept/tl-lib/sha256-impls/sha-cuda/: CMakeLists.txt
concept/tl-lib/sha256-impls/sha-cuda/src/: cuda_sha.cpp  cuda_sha.hpp
concept/tl-lib/sha256-impls/x86-sse41-sha/: CMakeLists.txt
concept/tl-lib/sha256-impls/x86-sse41-sha/kernels/: sha256-sse41-sha-x86.c
concept/tl-lib/sha256-impls/x86-sse41-sha/src/: x86exts_sha.cpp  x86exts_sha.hpp
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/TLLib/: CMakeLists.txt
cpp/TLLib/TLARMV8/: CMakeLists.txt
cpp/TLLib/TLARMV8/kernels/: sha256-sha-arm.c
cpp/TLLib/TLARMV8/src/: arm_sha.cpp  arm_sha.hpp
cpp/TLLib/TLCPP/: CMakeLists.txt
cpp/TLLib/TLCUDA/: CMakeLists.txt  Makefile
cpp/TLLib/TLCUDA/include/: sha256_iter.cuh
cpp/TLLib/TLCUDA/kernels/: sha256_iter.cu
cpp/TLLib/TLCUDA/prog/: main.cpp  main.cu  main2.cpp
cpp/TLLib/TLCUDA/src/: cuda_sha.cpp  cuda_sha.hpp  sha256.cu  sha256_iter.cu
cpp/TLLib/TLGENERIC/: CMakeLists.txt
cpp/TLLib/TLGENERIC/kernels/: sha256.c  sha256.h
cpp/TLLib/TLGENERIC/src/: sha256.cpp  sha256.hpp
cpp/TLLib/TLUTIL/: CMakeLists.txt
cpp/TLLib/TLUTIL/src/: test.hpp  tl_util.cpp  tl_util.hpp
cpp/TLLib/TLX86EXTS/: CMakeLists.txt
cpp/TLLib/TLX86EXTS/kernels/: sha256-sse41-sha-x86.c  sha256-sse41-sha-x86.h
cpp/TLLib/TLX86EXTS/src/: x86exts_sha.cpp  x86exts_sha.hpp
cpp/TLLib/include/: sha256-sse41-sha-x86.h
cpp/app/: CMakeLists.txt  main.cpp
cpp/sandbox/: CMakeLists.txt  cmd.cpp
cuda/src/: sha256-x86.c  sha256-x86_2.c  sha256iter.cu
